--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to 'Home', root_path %></li>
             <% if user_signed_in? %>
-            <li><%= link_to 'History', secret_path %></li>
+            <li><%= link_to 'History', history_path %></li>
             <% end %>
           </ul>
           <ul class="nav navbar-nav pull-right">
