--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,4 +13,22 @@
       <% end %>
     </div>
   </div>
+
+  <% if user_signed_in? %>
+  <div class="container" id="product">
+    <p id="notice"><%= notice %></p>
+    <h1>Books Catalog</h1>
+    <br>
+    <% @products.each do |product| %>
+      <div class="col-md-2">
+        <%= image_tag(product.image_url) %>
+        <h3><%= product.title %></h3>
+        
+        <div class="price_line">
+          <span class="price"><%= number_to_currency(product.price) %></span>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <% end %>
 <% end %>
