--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -29,6 +29,13 @@
         </div>
       </div>
     <% end %>
+
+    <div class="col-md-12">
+    <%= paginate @products %>
+    <%= page_entries_info @products %>
+    </div>
+
   </div>
   <% end %>
+
 <% end %>
