add total price

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,13 @@
 <% content_for :top_content do %>
-  <div class="jumbotron">
+  <% if user_signed_in? %>
+  <div class="alert-success welcome">
+  <% else %>
+  <div class="welcome2">
+  <% end %>
     <div class="container">
       <% if user_signed_in? %>
         <h3>Welcome <%= current_user.name %></h3>
-        <p>Happy shooping...</p>
+        <p style="font-style: italic;">Happy shooping...</p>
       <% else %>
         <h1>Welcome!</h1>
         <p>Register to get started.</p>
@@ -20,12 +24,13 @@
     <h1>Books Catalog</h1>
     <br>
     <% @products.each do |product| %>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-2">
         <%= image_tag(product.image_url) %>
         <h3><%= product.title %></h3>
         
         <div class="price_line">
           <span class="price"><%= number_to_currency(product.price) %></span>
+          <%= button_to 'Add to Cart', line_items_path(product_id: product), class: 'btn btn-xs btn-success' %>
         </div>
       </div>
     <% end %>
