--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,16 +26,36 @@
   @extend .alert-info;
 }
 
+.welcome {
+  margin: 0px 25px 0px 25px;
+  /*background: #a1de69;*/
+
+  h3 {
+    font-weight: bold;
+  }
+}
+
+.welcome2 {
+  margin: 0px 25px 0px 25px;
+  background: #dde3d9;
+}
+
 #product {
   img {
     height: 150px;
     width: 120px;
+
   }
 
   h3 {
     font-size: 100%;
     font-family: sans-serif;
     margin-bottom: 2px;
-    color: #227;
+    font-weight: bold;
+    /*color: #227;*/
+  }
+
+  form, div {
+    display: inline;
   }
 }
