--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,3 +59,66 @@
     display: inline;
   }
 }
+
+#cart {
+  font-size: smaller;
+  color: #56514c;
+
+  table {
+    border-top:
+    1px dotted #595;
+    border-bottom: 1px dotted #595;
+    margin-bottom: 10px;
+  }
+
+  form, div {
+    display: inline;
+  }
+}
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+
+
+
+/*order css*/
+.depot_form {
+  fieldset {
+    background: #efe;
+
+    legend {
+      color: #dfd;
+      background: #141;
+      font-family: sans-serif;
+      padding: 0.2em 1em;
+    }
+
+    div {
+      margin-bottom: 0.3em;
+    }
+  }
+    
+  form {
+/*    label {
+      width: 10em;
+      float: left;
+      text-align: right;
+      padding-top: 0.2em;
+      margin-right: 0.1em;
+      display: block;
+    }*/
+
+    select {
+      margin-left: 0.5em;
+    }
+    
+    .actions {
+      display: inline;
+    }
+    br {
+      display: none;
+    }
+  }
+}
